<resources>
    <string name="app_name">Kas RT</string>
    <string name="Avatar">Avatar</string>
    <string name="orang">orang</string>
    <string name="api">api</string>
    <string name="dashboard">Dashboard</string>
    <string name="tampilkan">tampilkan</string>
    <string name="text_clock">Text Clock</string>
    <string name="example_name">Android Studio</string>
    <string name="example_mail">android.studio@android.com</string>

    <!--CRUD-->
    <string name="add">Tambah Data</string>
    <string name="read">Lihat Data</string>
    <string name="update">Ubah Data</string>
    <string name="delete">Hapus Data</string>

    <!--inputan-->
    <string name="total_iuran_warga">Total iuran warga pada\nakhir rekap iuran bulanan</string>
    <string name="pengeluaran_iuran_warga">Pengeluaran iuran dari hasil\niuran warga</string>
    <string name="pemanfaatan_dari_iuran">Pemanfaatan dari iuran warga\nuntuk apa saja</string>
    <string name="total_iuran_individu">Total iuran individu warga</string>
    <string name="jumlah_iuran_bulanan_warga">Jumlah iuran bulanan warga</string>
    <string name="alamat_rumah">Alamat Rumah</string>
    <string name="email">Email</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="nama_depan">Nama Depan</string>

    <!--tombol CRUD-->
    <string name="tambah">Tambah</string>
    <string name="ubah">Ubah</string>
    <string name="hapus">Hapus</string>

    <!--login register-->
    <string name="login">Login</string>
    <string name="logingoogle">Login with Google</string>
    <string name="register">Register</string>
    <string name="signin">Sign In</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello</string>

    <string name="judul">Pengelolaan\nKeuangan RT</string>
    <string name="deskripsi">Mengelola keuangan kas RT</string>

    <string name="password">password</string>
    <string name="pilih_login">ATAU LOGIN DENGAN</string>
    <string name="buat_akun">ATAU BUAT AKUN DENGAN</string>
    <string name="facebok">facebook</string>
    <string name="google">google</string>

    <string name="facebook_app_id">YOUR_FACEBOOK_APP_ID</string>
    <string name="client_id">624327903423-d4hka9b6e008ts4b59bjfk8pf5nin8h4.apps.googleusercontent.com</string>
    <string name="data_warga">Data Warga</string>
    <string name="total_iuran">Total Iuran</string>
    <string name="address">Alamat</string>
    <string name="nama">Nama</string>
    <string name="reqres">reqres</string>
    <string name="laporan">Laporan Keuangan</string>
    <string name="tombol">Tombol</string>
    <string name="settings">Settings</string>
    <string name="tombol_kepanikan">Tombol Kepanikan</string>
    <string name="tombol_kepanikan_contoh">Tombol Kepanikan (Testing)</string>
    <string name="klik">Klik</string>
    <string name="mode_malam">Mode Malam</string>

    <!--nav panel samping-->
    <string name="home">Home</string>
    <string name="about_us">About Us</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="ketik_lapor">Ketik laporan Anda di sini</string>
    <string name="lapor">Lapor</string>
    <string name="tombol_panik">Tombol Panik</string>
    <string name="suhu">Suhu:</string>
    <string name="kelembaban">Kelembaban:</string>
    <string name="kualitas_udara">Kualitas Udara:</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="upload">Upload</string>
    <string name="gambar">gambar</string>
    <string name="jumlah_tagihan">Jumlah Tagihan:</string>
    <string name="jatuh_tempo">Jatuh Tempo:</string>
    <string name="bayar">Bayar</string>
    <string name="ketik_informasi_siaran">Ketik informasi siaran</string>
    <string name="kirim">Kirim</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="detect_face">Detect Face</string>
    <string name="wajah">Deteksi Wajah</string>
    <string name="pengelolaan_lingkungan">Pengelolaan Lingkungan</string>
    <string name="chatbot">Chat Bot</string>
    <string name="payment">Pembayaran</string>
    <string name="broadcast">Broadcast</string>
    <string name="digitalisasi">Digitalisasi</string>

    <string name="piliht">Pilih Transaksi</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="amount">Amount</string>
    <string name="balance_0_00">Balance: $0.00</string>
    <string name="pilih_lokasi">pilih lokasi</string>
    <string name="deteksi_wajah">Deteksi Wajah</string>
    <string name="gambar_kas_rt">Gambar Kas RT</string>
    <string name="deskripsi_about_us">Aplikasi ini dibuat untuk pengelolaan keuangan kas RT warga. Dengan aplikasi ini, data keuangan warga dapat dikelola dengan lebih mudah.</string>
    <string name="kelola_warga">Kelola warga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">NEXT</string>
    <string name="previous">previous</string>
    <string name="pilih_dokumen">Pilih Dokumen</string>
    <string name="berdasarkan_nama_dokumen">Berdasarkan Nama Dokumen</string>
    <string name="nama_dokumen">Nama Dokumen</string>
    <string name="pembukuan_keuangan">Pembukuan Keuangan</string>
    <string name="lainnya">Lainnya</string>
</resources>