<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_setting"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_info"
            android:title="@string/about_us"/>

        <item
            android:id="@+id/nav_panik"
            android:icon="@drawable/ic_warning"
            android:title="@string/tombol_panik"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_off"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>