<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment">

    <TextView
        android:id="@+id/billAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_tagihan"
        android:layout_margin="16dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/dueDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jatuh_tempo"
        android:layout_below="@id/billAmountTextView"
        android:layout_margin="16dp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/payButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bayar"
        android:layout_below="@id/dueDateTextView"
        android:layout_margin="16dp"/>

</RelativeLayout>