<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PengelolaanLingkungan">

    <TextView
        android:id="@+id/suhuTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suhu"
        android:textSize="18sp"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/kelembabanTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelembaban"
        android:layout_below="@id/suhuTextView"
        android:textSize="18sp"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/kualitasUdaraTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kualitas_udara"
        android:layout_below="@id/kelembabanTextView"
        android:textSize="18sp"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/tombols"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kualitasUdaraTextView"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/ubahdat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get Lokasi"/>

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_data"
            android:layout_marginStart="40dp"/>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_marginTop="250dp"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:hint="@string/pilih_lokasi"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt"
                android:inputType="none"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>