<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".layarKedua">

    <View
        android:id="@+id/top_View"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_gelombang"/>

    <TextClock
        android:id="@+id/jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_clock"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:format24Hour="hh:mm:ss a"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:text="@string/previous"
        android:id="@+id/previous"
        android:padding="20dp"
        android:layout_marginTop="130dp"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:text="@string/next"
        android:id="@+id/next"
        android:padding="20dp"
        android:layout_marginTop="130dp"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="4"
        android:columnCount="4"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/top_View">

        <androidx.cardview.widget.CardView
            android:id="@+id/laporan"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            app:cardElevation="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_money"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/laporan"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/data_warga"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            app:cardElevation="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_ubah_orang"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_warga"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/aboutUs"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            app:cardElevation="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_money"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pembukuan_keuangan"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/kelolalingkungan"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_clean_hands"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pengelolaan_lingkungan"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</RelativeLayout>